--- a/templates/irish_rail.html
+++ b/templates/irish_rail.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Trains close to you</title>
 <link rel="stylesheet" type="text/css" href="static/style.css">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="static/latlong.js"></script>
