--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family:Arial, Helvetica, Sans-serif, verdana;
 	margin:0 auto;
-	width:620px;
+	width:800px;
 }
 
 h1 {
@@ -16,27 +16,13 @@ h2 {
 	text-align:center;
 }
 
-table a:link {
-	color: #666;
-	font-weight: bold;
-	text-decoration:none;
-}
-table a:visited {
-	color: #999999;
-	font-weight:bold;
-	text-decoration:none;
-}
-table a:active,
-table a:hover {
-	color: #bd5a35;
-	text-decoration:underline;
-}
 table {
 	color:#666;
 	font-size:12px;
 	text-shadow: 1px 1px 0px #fff;
 	background:#eaebec;
-	margin:20px;
+	margin-left: auto;
+	margin-right: auto;
 	border:#ccc 1px solid;
 
 	-moz-border-radius:3px;
